// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Topics snapshots fetchTopics: GraphQL error 1`] = `
<div>
  <div>
    Error: 
    {"graphQLErrors":[{"message":"FetchTopics: GraphQL error"}],"networkError":null,"message":"FetchTopics: GraphQL error"}
  </div>
</div>
`;

exports[`Topics snapshots fetchTopics: network error 1`] = `
<div>
  <div>
    Error: 
    {"graphQLErrors":[],"networkError":{},"message":"FetchTopics: network error"}
  </div>
</div>
`;

exports[`Topics snapshots loading 1`] = `
<div>
  <div>
    Loading...
  </div>
</div>
`;
